Completed v1 of App to test a deployment

--- a/Advanced Programs (Using Angular)/Final-Angular-Project/src/app/error-page/error-page.component.html
+++ b/Advanced Programs (Using Angular)/Final-Angular-Project/src/app/error-page/error-page.component.html
@@ -14,11 +14,14 @@
   <div class="row">
     <div class="col-md-12 d-flex flex-column justify-content-center align-items-center text-white vh-100">
       <h1>404</h1>
-      <h4>Page not found</h4>
-      <p>The requested url was not found on this server </p>
+      <h4>Página no encontrada</h4>
+      <p>El URL solicitado no fue encontrado en este servidor</p>
       <br>
-      <a (click)="sendToHome($event)"><div id="backText">Back To Home</div></a>
+      <a (click)="sendToHome($event)">
+        <div id="backText">Volver al Inicio</div>
+      </a>
     </div>
   </div>
 </body>
+
 </html>
